--- a/nav_home.css
+++ b/nav_home.css
@@ -48,7 +48,7 @@ body{
 }
 #home{
   display: flex;
-  background: url(/img/home.jpg) no-repeat center;
+  background: url(home.jpg) no-repeat center;
   justify-content: center;
   align-content: center;
   height: 100vh;
